Rename from market name to model number
Change-Id: Iae7c9bf503dcf72b3cdcc25565829bff3d34754d

--- a/ramdisk/init.e970.rc
+++ b/ramdisk/init.e970.rc
@@ -1,4 +1,9 @@
-import init.gee.rc
+import init.ls970-common.rc
+
+on fs
+    # mount ALL THE THINGS
+    mount_all ./fstab.e970
+    setprop ro.crypto.fuse_sdcard true
 
 on init
     mkdir /mnt/shell/emulated 0700 shell shell
