--- a/ramdisk/init.e970.rc
+++ b/ramdisk/init.e970.rc
@@ -16,18 +16,16 @@
 
 import init.ls970-common.rc
 
-on fs
-    # mount ALL THE THINGS
-    mount_all ./fstab.e970
-    setprop ro.crypto.fuse_sdcard true
-
 on init
     mkdir /mnt/shell/emulated 0700 shell shell
     mkdir /storage 0550 system sdcard_r
     mkdir /storage/emulated 0555 root root
 
     #External storage directories
-    mkdir /storage/sdcard1 0000 system system
+    chmod 0701 /mnt/media_rw
+    mkdir /mnt/media_rw/sdcard1 0700 media_rw media_rw
+    mkdir /storage/sdcard1 0700 root root
+#    mkdir /storage/sdcard1 0000 system system
 
     export EXTERNAL_STORAGE /storage/emulated/legacy
     export SECONDARY_STORAGE /storage/sdcard1
@@ -39,12 +37,17 @@ on init
     symlink /storage/emulated/legacy /mnt/sdcard
     symlink /storage/emulated/legacy /storage/sdcard0
     symlink /mnt/shell/emulated/0 /storage/emulated/legacy
-    symlink /storage/sdcard1 /extSdCard
-    symlink /storage/sdcard1 /mnt/extSdCard
+#    symlink /storage/sdcard1 /extSdCard
+#    symlink /storage/sdcard1 /mnt/extSdCard
 
     setprop ro.usb.idproduct.mtp 631C
     setprop ro.usb.idproduct.mtp_adb 61F9
 
-service fuse_sdcard /system/bin/sdcard -u 1023 -g 1023 /mnt/media_rw/sdcard /storage/sdcard1
+service fuse_sdcard1 /system/bin/sdcard -u 1023 -g 1023 -d /mnt/media_rw/sdcard1 /storage/sdcard1
     class late_start
     disabled
+
+on fs
+    # mount ALL THE THINGS
+    mount_all ./fstab.e970
+    setprop ro.crypto.fuse_sdcard true
